// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "Test": Object {
    "fileName": "Test",
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 2`] = `
Array [
  Object {
    "internalKey": "a123",
    "universalKey": "Test",
  },
]
`;

exports[`AssetWorkspace setWML should correctly parse WML input 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
            "id": "UUID-2",
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "b456",
              "tag": "Room",
            },
            "id": "UUID-5",
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
        "id": "UUID-6",
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123#b456",
              "tag": "Exit",
            },
            "id": "UUID-1",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
        },
        "id": "UUID-2",
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
  "a123#b456": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "tag": "String",
              "value": "welcome",
            },
            "id": "UUID-0",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "data": Object {
          "from": "a123",
          "key": "a123#b456",
          "tag": "Exit",
          "to": "b456",
        },
        "id": "UUID-1",
      },
    ],
    "from": "a123",
    "key": "a123#b456",
    "tag": "Exit",
    "to": "b456",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "b456#a123",
              "tag": "Exit",
            },
            "id": "UUID-4",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "b456",
          "tag": "Room",
        },
        "id": "UUID-5",
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "tag": "String",
              "value": "vortex",
            },
            "id": "UUID-3",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "data": Object {
          "from": "b456",
          "key": "b456#a123",
          "tag": "Exit",
          "to": "a123",
        },
        "id": "UUID-4",
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "tag": "Exit",
    "to": "a123",
  },
}
`;

exports[`AssetWorkspace setWML should correctly parse WML input 2`] = `
Array [
  Object {
    "internalKey": "a123",
    "universalKey": "TestA",
  },
  Object {
    "internalKey": "b456",
    "universalKey": "ROOM#UUID-7",
  },
]
`;

exports[`AssetWorkspace setWML should look up import namespace mappings 1`] = `
Array [
  Object {
    "internalKey": "b456",
    "universalKey": "TestB",
  },
  Object {
    "internalKey": "a123",
    "universalKey": "ROOM#UUID-10",
  },
  Object {
    "internalKey": "c789",
    "universalKey": "FEATURE#UUID-11",
  },
]
`;

exports[`AssetWorkspace setWML should populate export namespace mappings 1`] = `
Array [
  Object {
    "exportAs": "Room2",
    "internalKey": "a123",
    "universalKey": "ROOM#UUID-9",
  },
  Object {
    "internalKey": "b456",
    "universalKey": "ROOM#UUID-10",
  },
]
`;
